Fixed white space around brunch and jenkins icons

--- a/css/style-semantic.css
+++ b/css/style-semantic.css
@@ -98,7 +98,8 @@
   /* Image Size */
 
   div.ui.mini.images img.brunch {
-  	transform: scale(0.6);
+    max-width: 7mm;
+    margin: 0 2mm;
   }
 
   /* Formation */
